# vehicle_maintenance_api

./: .gitignore  README.md  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  works_patterns.json
alembic/: env.py
alembic/versions/: 08827839eac4_create_tables_from_models.py  651d936fbeaa_create_tables_from_models.py  74f21b46ee37_create_tables_from_models.py  7a2127201e70_create_tables_from_models.py  7cdfbce4f6a2_create_tables_from_models.py  c2b8758c5141_create_tables_from_models.py  d8b576e088ff_create_tables_from_models.py  e5ebac855d7e_create_tables_from_models.py  fac270d4383e_create_tables_from_models.py
api_v1/: __init__.py
api_v1/auth/: README.md  __init__.py  auth_jwt.py  exceptions.py  getters.py  schemas.py  token.py  utils.py  validate.py  views.py
api_v1/events/: crud.py  utils.py  views.py
api_v1/mileage_events/: crud.py  dependencies.py  views.py
api_v1/users/: crud.py  dependencies.py  schemas.py  utils.py  views.py
api_v1/vehicles/: crud.py  dependencies.py  utils.py  views.py
api_v1/work_events/: crud.py  dependencies.py  utils.py  views.py
api_v1/workpatterns/: crud.py  dependencies.py  views.py
api_v1/works/: crud.py  dependencies.py  utils.py  views.py
auth/: password_operators.py  utils.py
core/: __init__.py  common.py  config.py  database.py  lifespan.py  models.py  utils.py  vin.py
core/models/: __init__.py  base.py  event.py  events.py  mileage_event.py  mixins.py  user.py  (+4 more)
tests/: conftest.py  test_main.py  test_user.py  test_vehicles.py  test_work_pattern.py  test_works.py  test_works_utils.py
(+7 files in other folders)
